force-app/main/default/objects/Training_Program__c/fields/Remind_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Remind_Date_1__c</fullName>
    <formula>Training_Date__c -15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remind Date 1</label>
    <type>Date</type>
</CustomField>