force-app/main/default/objects/Training_Program__c/fields/Remind_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Remind_Date_2__c</fullName>
    <formula>Training_Date__c -12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remind Date 2</label>
    <type>Date</type>
</CustomField>