force-app/main/default/objects/Training_Program__c/fields/Remind_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Remind_Date_3__c</fullName>
    <formula>Training_Date__c -2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remind Date 3</label>
    <type>Date</type>
</CustomField>