force-app/main/default/objects/Training_Program__c/fields/Training_Request__c.field-meta.xml
<CustomField>
    <fullName>Training_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Request</label>
    <referenceTo>Training_request__c</referenceTo>
    <relationshipLabel>Training Programs</relationshipLabel>
    <relationshipName>Training_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>